--- a/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
+++ b/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
@@ -5,11 +5,118 @@
   xmlns:based="using:Leagueoflegends.Support.UI.Units"
   xmlns:views="using:Leagueoflegends.Main.UI.Views">
 
+  <Style x:Key="MainGridStyle" TargetType="Grid">
+    <Setter Property="Width" Value="1280"/>
+    <Setter Property="Height" Value="720"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="TopBorderStyle" TargetType="Border">
+    <Setter Property="Background" Value="#785A28"/>
+    <Setter Property="Height" Value="2"/>
+  </Style>
+
+  <Style x:Key="RiotPlayButtonStyle" TargetType="based:RiotPlayButton">
+    <Setter Property="Content" Value="Play"/>
+    <Setter Property="Margin" Value="25 20 20 20"/>
+  </Style>
+
+  <Style x:Key="MainMenuStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="Grid.Column" Value="2"/>
+  </Style>
+
+  <Style x:Key="IconMenuStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="Grid.Column" Value="4"/>
+  </Style>
+
+  <Style x:Key="StatusIndicatorStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Grid.Column" Value="6"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Margin" Value="10 0 0 0"/>
+  </Style>
+
+  <Style x:Key="UserGridStyle" TargetType="Grid">
+    <Setter Property="Grid.Column" Value="7"/>
+    <Setter Property="Background" Value="#010A13"/>
+    <Setter Property="Margin" Value="20 0 0 0"/>
+    <Setter Property="Width" Value="220"/>
+  </Style>
+
+  <Style x:Key="RiotUserAvatarStyle" TargetType="based:RiotUserAvatar">
+    <Setter Property="Margin" Value="10 0 0 0"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+  </Style>
+
+  <Style x:Key="RiotUserDisplayStatusStyle" TargetType="based:RiotUserDisplayStatus">
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Margin" Value="10 10 0 0"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="WindowControlButtonStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="HorizontalAlignment" Value="Right"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
+    <Setter Property="Margin" Value="40 2 5 10"/>
+  </Style>
+
+  <Style x:Key="RiotWindowControlButtonStyle" TargetType="based:RiotWindowControlButton">
+    <Setter Property="Margin" Value="10 5 5 5"/>
+  </Style>
+
+  <Style x:Key="HelpButtonStyle" TargetType="based:RiotWindowControlButton" BasedOn="{StaticResource RiotWindowControlButtonStyle}">
+    <Setter Property="IconType" Value="Help"/>
+  </Style>
+
+  <Style x:Key="MinimizeButtonStyle" TargetType="based:RiotWindowControlButton" BasedOn="{StaticResource RiotWindowControlButtonStyle}">
+    <Setter Property="IconType" Value="Minimize"/>
+  </Style>
+
+  <Style x:Key="SettingsButtonStyle" TargetType="based:RiotWindowControlButton" BasedOn="{StaticResource RiotWindowControlButtonStyle}">
+    <Setter Property="IconType" Value="Settings"/>
+  </Style>
+
+  <Style x:Key="CloseButtonStyle" TargetType="based:RiotWindowControlButton" BasedOn="{StaticResource RiotWindowControlButtonStyle}">
+    <Setter Property="IconType" Value="Close"/>
+  </Style>
+
+  <Style x:Key="RiotIconButtonStyle" TargetType="based:RiotIconButton">
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Margin" Value="10 10 8 10"/>
+    <Setter Property="HorizontalAlignment" Value="Right"/>
+    <Setter Property="VerticalAlignment" Value="Bottom"/>
+  </Style>
+
+  <Style x:Key="SeparatorBorderStyle" TargetType="Border">
+    <Setter Property="Grid.Row" Value="2"/>
+    <Setter Property="Background" Value="#553D4143"/>
+  </Style>
+
+  <Style x:Key="ContentLayerStyle" TargetType="james:UnoLayer">
+    <Setter Property="Grid.Column" Value="0"/>
+    <Setter Property="Margin" Value="0 0 0 0"/>
+  </Style>
+
+  <Style x:Key="SubNavLayerStyle" TargetType="james:UnoLayer">
+    <Setter Property="Grid.Column" Value="0"/>
+    <Setter Property="Margin" Value="20 0 0 0"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+  </Style>
+
+  <Style x:Key="SocialLayerStyle" TargetType="james:UnoLayer">
+    <Setter Property="Grid.Column" Value="1"/>
+  </Style>
+
   <Style TargetType="views:MainContent">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="views:MainContent">
-          <Grid Width="1280" Height="720" HorizontalAlignment="Center" VerticalAlignment="Center">
+          <Grid Style="{StaticResource MainGridStyle}">
             <Grid.RowDefinitions>
               <RowDefinition Height="2"/>
               <RowDefinition Height="Auto"/>
@@ -17,7 +124,7 @@
               <RowDefinition/>
             </Grid.RowDefinitions>
             <based:RiotWallpaper Grid.RowSpan="4" MenuName="{Binding CurrentMenu}"/>
-            <Border Background="#785A28" Height="2"/>
+            <Border Style="{StaticResource TopBorderStyle}"/>
             <Grid Grid.Row="1">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -30,69 +137,53 @@
                 <ColumnDefinition Width="Auto"/>
               </Grid.ColumnDefinitions>
 
-              <based:RiotPlayButton Content="Play" Margin="25 20 20 20"/>
+              <based:RiotPlayButton Style="{StaticResource RiotPlayButtonStyle}"/>
               <based:RiotNoticeButton Grid.Column="1"/>
-              <StackPanel Orientation="Horizontal" Grid.Column="2">
-                <based:RiotMainMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="HOME" MenuName="HOME" IsChecked="True"/>
-                <based:RiotMainMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="TFT" MenuName="TFT"/>
-                <based:RiotMainMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="CLASH" MenuName="CLASH"/>
+              <StackPanel Style="{StaticResource MainMenuStackPanelStyle}">
+                <based:RiotMainMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="HOME" MenuName="HOME" IsChecked="True"/>
+                <based:RiotMainMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="TFT" MenuName="TFT"/>
+                <based:RiotMainMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="CLASH" MenuName="CLASH"/>
               </StackPanel>
-              <StackPanel Orientation="Horizontal" Grid.Column="4">
-                <based:RiotMainIconMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="PROFILE" MenuIcon="Profile"/>
-                <based:RiotMainIconMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="COLLECTION" MenuIcon="Collection"/>
-                <based:RiotMainIconMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="SHOP" MenuIcon="Shop"/>
-                <based:RiotMainIconMenu Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="STORE" MenuIcon="Store"/>
+              <StackPanel Style="{StaticResource IconMenuStackPanelStyle}">
+                <based:RiotMainIconMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="PROFILE" MenuIcon="Profile"/>
+                <based:RiotMainIconMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="COLLECTION" MenuIcon="Collection"/>
+                <based:RiotMainIconMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="SHOP" MenuIcon="Shop"/>
+                <based:RiotMainIconMenu Command="{Binding MenuCommand}" GroupName="MainMenu" CommandParameter="STORE" MenuIcon="Store"/>
               </StackPanel>
               <based:VerticalMainMenuSeparator Grid.Column="5"/>
-              <StackPanel
-                Grid.Column="6"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Margin="10 0 0 0">
+              <StackPanel Style="{StaticResource StatusIndicatorStackPanelStyle}">
                 <based:RiotStatusIndicator IconType="RP" Value="104"/>
                 <based:RiotStatusIndicator IconType="BlueEssence" Value="271"/>
               </StackPanel>
-              <Grid Grid.Column="7" Background="#010A13" Margin="20 0 0 0" Width="220">
+              <Grid Style="{StaticResource UserGridStyle}">
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="Auto"/>
                   <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <based:RiotUserAvatar Margin="10 0 0 0" HorizontalAlignment="Left"/>
-                <based:RiotUserDisplayStatus
-                  Grid.Column="1"
-                  Margin="10 10 0 0"
+                <based:RiotUserAvatar Style="{StaticResource RiotUserAvatarStyle}"/>
+                <based:RiotUserDisplayStatus Style="{StaticResource RiotUserDisplayStatusStyle}"
                   UserName="Hide on bush"
-                  VerticalAlignment="Center"
                   IsOnline="True"/>
-                <StackPanel
-                  Grid.Column="1"
-                  Orientation="Horizontal"
-                  HorizontalAlignment="Right"
-                  VerticalAlignment="Top"
-                  Margin="40 2 5 10">
-                  <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Help"/>
-                  <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Minimize"/>
-                  <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Settings"/>
-                  <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Close"/>
+                <StackPanel Style="{StaticResource WindowControlButtonStackPanelStyle}">
+                  <based:RiotWindowControlButton Style="{StaticResource HelpButtonStyle}"/>
+                  <based:RiotWindowControlButton Style="{StaticResource MinimizeButtonStyle}"/>
+                  <based:RiotWindowControlButton Style="{StaticResource SettingsButtonStyle}" Command="{Binding SettingsCommand}"/>
+                  <based:RiotWindowControlButton Style="{StaticResource CloseButtonStyle}"/>
                 </StackPanel>
-                <based:RiotIconButton
-                  Grid.Column="1"
-                  Margin="10 10 8 10"
-                  ControlType="Alarm"
-                  HorizontalAlignment="Right"
-                  VerticalAlignment="Bottom"/>
+                <based:RiotIconButton Style="{StaticResource RiotIconButtonStyle}" IconType="Alarm"/>
               </Grid>
             </Grid>
-            <Border Grid.Row="2" Background="#553D4143"/>
+            <Border Style="{StaticResource SeparatorBorderStyle}"/>
             <Grid Grid.Row="3">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
               </Grid.ColumnDefinitions>
-              <james:UnoLayer Grid.Column="0" LayerName="ContentLayer" Margin="0 0 0 0"/>
-              <james:UnoLayer Grid.Column="0" LayerName="SubNavLayer" Margin="20 0 0 0" HorizontalAlignment="Left"/>
-              <james:UnoLayer Grid.Column="1" LayerName="SocialLayer"/>
+              <james:UnoLayer Style="{StaticResource ContentLayerStyle}" LayerName="ContentLayer"/>
+              <james:UnoLayer Style="{StaticResource SubNavLayerStyle}" LayerName="SubNavLayer"/>
+              <james:UnoLayer Style="{StaticResource SocialLayerStyle}" LayerName="SocialLayer"/>
             </Grid>
+            <james:UnoLayer Grid.RowSpan="4" LayerName="OverlayLayer"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
