--- a/src/Leagueoflegends.Social/Themes/Views/SocialContent.xaml
+++ b/src/Leagueoflegends.Social/Themes/Views/SocialContent.xaml
@@ -20,6 +20,14 @@
     <Setter Property="Foreground" Value="#A09B8C"/>
   </Style>
 
+  <Style x:Key="SocialIconButtonStyle" TargetType="based:RiotIconButton">
+    <Setter Property="Margin" Value="5 10 5 10"/>
+  </Style>
+
+  <Style TargetType="based:RiotFriendListBox" x:Key="FriendListBoxStyle">
+    <Setter Property="Grid.Row" Value="1"/>
+  </Style>
+
   <Style TargetType="views:SocialContent">
     <Setter Property="Width" Value="220"/>
     <Setter Property="Background" Value="#010A13"/>
@@ -32,19 +40,14 @@
               <RowDefinition Height="*"/>
               <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="SOCIAL"
-                       VerticalAlignment="Center"
-                       FontSize="12"
-                       Margin="10 0 0 0"
-                       FontWeight="Bold"
-                       Foreground="#A09B8C"/>
+            <TextBlock Style="{StaticResource SocialHeaderText}"/>
             <StackPanel Style="{StaticResource SocialButtonsPanel}">
-              <based:RiotIconButton Margin="5 10 5 10" ControlType="AddFriends"/>
-              <based:RiotIconButton Margin="5 10 5 10" ControlType="AddFolder"/>
-              <based:RiotIconButton Margin="5 10 5 10" ControlType="Option"/>
-              <based:RiotIconButton Margin="5 10 5 10" ControlType="Magnify"/>
+              <based:RiotIconButton Style="{StaticResource SocialIconButtonStyle}" IconType="AddFriends"/>
+              <based:RiotIconButton Style="{StaticResource SocialIconButtonStyle}" IconType="AddFolder"/>
+              <based:RiotIconButton Style="{StaticResource SocialIconButtonStyle}" IconType="Option"/>
+              <based:RiotIconButton Style="{StaticResource SocialIconButtonStyle}" IconType="Magnify"/>
             </StackPanel>
-            <based:RiotFriendListBox Grid.Row="1" ItemsSource="{Binding Friends}"/>
+            <based:RiotFriendListBox Style="{StaticResource FriendListBoxStyle}" ItemsSource="{Binding Friends}"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
