--- a/src/Leagueoflegends.Support/Themes/Units/RiotMainMenu.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotMainMenu.xaml
@@ -4,27 +4,33 @@
   xmlns:cnvts="using:Leagueoflegends.Support.Local.Converters"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="MenuSelectionImageSource">ms-appx:///Leagueoflegends.Support/Images/menu-selection.png</x:String>
-  
-  <LinearGradientBrush x:Key="CheckedBackground" EndPoint="0.5,1" StartPoint="0.5,0">
+  <x:String x:Key="ArrowIconData">M0,0 L3,0 L15,12 L27,0 L30,0 L15,15 L0,0 Z M10,0 L12,0 L15,3 L18,0 L20,0 L15,5 L10,0 Z</x:String>
+
+  <LinearGradientBrush x:Key="CheckedBackgroundBrush" EndPoint="0.5,1" StartPoint="0.5,0">
     <GradientStop Color="Transparent" Offset="0"/>
     <GradientStop Color="#008B6811" Offset="0.5"/>
     <GradientStop Color="#228B6811" Offset="0.75"/>
     <GradientStop Color="#448B6811" Offset="1"/>
   </LinearGradientBrush>
 
-  <Style x:Key="SelectImageStyle" TargetType="Image">
-    <Setter Property="VerticalAlignment" Value="Top"/>
-    <Setter Property="HorizontalAlignment" Value="Center"/>
-    <Setter Property="Source" Value="{StaticResource MenuSelectionImageSource}"/>
-    <Setter Property="Visibility" Value="Collapsed"/>
-    <Setter Property="Width" Value="28"/>
-    <Setter Property="Height" Value="15"/>
-  </Style>
+  <LinearGradientBrush x:Key="ArrowFillBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+    <GradientStop Color="#FF785A28" Offset="0"/>
+    <GradientStop Color="#FFBD9139" Offset="1"/>
+  </LinearGradientBrush>
 
   <Style x:Key="ContentStyle" TargetType="TextBlock">
     <Setter Property="FontSize" Value="15"/>
     <Setter Property="FontWeight" Value="Bold"/>
+  </Style>
+
+  <Style x:Key="ArrowPathStyle" TargetType="Path">
+    <Setter Property="Data" Value="{StaticResource ArrowIconData}"/>
+    <Setter Property="Fill" Value="{StaticResource ArrowFillBrush}"/>
+    <Setter Property="Stretch" Value="Uniform"/>
+    <Setter Property="Width" Value="30"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
+    <Setter Property="Visibility" Value="Collapsed"/>
   </Style>
 
   <Style TargetType="units:RiotMainMenu">
@@ -42,13 +48,12 @@
                 <VisualState x:Name="Normal"/>
                 <VisualState x:Name="PointerOver">
                   <VisualState.Setters>
-                    <Setter Target="CheckedRect.Fill" Value="Transparent"/>
-                    <Setter Target="PointerOverRect.Fill" Value="{StaticResource CheckedBackground}"/>
+                    <Setter Target="PointerOverRect.Fill" Value="{StaticResource CheckedBackgroundBrush}"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Pressed">
                   <VisualState.Setters>
-                    <Setter Target="PointerOverRect.Fill" Value="{StaticResource CheckedBackground}"/>
+                    <Setter Target="PointerOverRect.Fill" Value="{StaticResource CheckedBackgroundBrush}"/>
                     <Setter Target="ContentPresenter.Foreground" Value="#FFFCF1DC"/>
                   </VisualState.Setters>
                 </VisualState>
@@ -58,23 +63,23 @@
                 <VisualState x:Name="Checked">
                   <VisualState.Setters>
                     <Setter Target="PointerOverRect.Fill" Value="Transparent"/>
-                    <Setter Target="CheckedRect.Fill" Value="{StaticResource CheckedBackground}"/>
+                    <Setter Target="CheckedRect.Fill" Value="{StaticResource CheckedBackgroundBrush}"/>
                     <Setter Target="ContentPresenter.Foreground" Value="#FFFFFF"/>
-                    <Setter Target="SelectionImage.Visibility" Value="Visible"/>
+                    <Setter Target="ArrowPath.Visibility" Value="Visible"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Unchecked">
                   <VisualState.Setters>
                     <Setter Target="CheckedRect.Fill" Value="Transparent"/>
                     <Setter Target="ContentPresenter.Foreground" Value="#CDBE91"/>
-                    <Setter Target="SelectionImage.Visibility" Value="Collapsed"/>
+                    <Setter Target="ArrowPath.Visibility" Value="Collapsed"/>
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
             <Rectangle x:Name="CheckedRect" Fill="Transparent"/>
             <Rectangle x:Name="PointerOverRect" Fill="Transparent"/>
-            <Image x:Name="SelectionImage" Style="{StaticResource SelectImageStyle}"/>
+            <Path x:Name="ArrowPath" Style="{StaticResource ArrowPathStyle}"/>
             <TextBlock
               x:Name="ContentPresenter"
               Style="{StaticResource ContentStyle}"
