--- a/src/Leagueoflegends.Main/Themes/Views/OptionContent.xaml
+++ b/src/Leagueoflegends.Main/Themes/Views/OptionContent.xaml
@@ -14,18 +14,145 @@
     <Setter Property="Grid.Row" Value="1"/>
     <Setter Property="Grid.Column" Value="0"/>
   </Style>
-  
+
+  <Style x:Key="HeaderStyle" TargetType="TextBlock">
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="FontSize" Value="17"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+  </Style>
+
+  <Style x:Key="DetailButtonStyle" TargetType="Button">
+    <Setter Property="Foreground" Value="#0596AA" />
+    <Setter Property="Margin" Value="0,10,0,15" />
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="Button">
+          <Border Background="Transparent" BorderBrush="Transparent">
+            <VisualStateManager.VisualStateGroups>
+              <VisualStateGroup x:Name="CommonStates">
+                <VisualState x:Name="Normal"/>
+                <VisualState x:Name="PointerOver">
+                  <VisualState.Setters>
+                    <Setter Target="ContentPresenter.Foreground" Value="#CDFAFA"/>
+                  </VisualState.Setters>
+                </VisualState>
+              </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+            <TextBlock Text="{TemplateBinding Content}"/>
+          </Border>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
+
+  <Style x:Key="MainGridStyle" TargetType="Grid">
+    <Setter Property="Background" Value="#AA000000"/>
+  </Style>
+
+  <Style x:Key="MainBorderStyle" TargetType="Border">
+    <Setter Property="Background" Value="#FF010A13"/>
+    <Setter Property="Width" Value="600"/>
+    <Setter Property="Height" Value="700"/>
+    <Setter Property="BorderBrush" Value="{StaticResource RiotBorderBrush}"/>
+    <Setter Property="BorderThickness" Value="1"/>
+  </Style>
+
+  <Style x:Key="TopBorderStyle" TargetType="Border">
+    <Setter Property="Grid.Row" Value="0"/>
+    <Setter Property="Grid.ColumnSpan" Value="2"/>
+    <Setter Property="BorderThickness" Value="0 0 0 1"/>
+    <Setter Property="BorderBrush" Value="#77383939"/>
+  </Style>
+
+  <Style x:Key="LeftBorderStyle" TargetType="Border">
+    <Setter Property="Grid.Row" Value="1"/>
+    <Setter Property="BorderThickness" Value="0 0 1 0"/>
+    <Setter Property="BorderBrush" Value="#33383939"/>
+  </Style>
+
+  <Style x:Key="BottomBorderStyle" TargetType="Border">
+    <Setter Property="Grid.Row" Value="2"/>
+    <Setter Property="Grid.ColumnSpan" Value="2"/>
+    <Setter Property="BorderThickness" Value="0 1 0 0"/>
+    <Setter Property="BorderBrush" Value="#33383939"/>
+  </Style>
+
+  <Style x:Key="HeaderStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Margin" Value="10 0 0 0"/>
+  </Style>
+
+  <Style x:Key="ClientTextStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="Style" Value="{StaticResource HeaderStyle}"/>
+    <Setter Property="Margin" Value="8 0 0 0"/>
+    <Setter Property="Text" Value="CLIENT /"/>
+  </Style>
+
+  <Style x:Key="GeneralTextStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#F0E6D2"/>
+    <Setter Property="Style" Value="{StaticResource HeaderStyle}"/>
+    <Setter Property="Margin" Value="5 0 0 0"/>
+    <Setter Property="Text" Value="GENERAL"/>
+  </Style>
+
+  <Style x:Key="RestoreDefaultsButtonStyle" TargetType="based:RiotButton">
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Margin" Value="10"/>
+    <Setter Property="Content" Value="Restore Defaults"/>
+    <Setter Property="HorizontalAlignment" Value="Right"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
+  </Style>
+
+  <Style x:Key="ContentStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Grid.Row" Value="1"/>
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Margin" Value="30,20,0,0"/>
+  </Style>
+
+  <Style x:Key="RulesTextStyle" TargetType="TextBlock">
+    <Setter Property="FontSize" Value="12"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+  </Style>
+
+  <Style x:Key="WindowSizeTextStyle" TargetType="TextBlock">
+    <Setter Property="Margin" Value="0,20,0,10"/>
+    <Setter Property="FontSize" Value="12"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+  </Style>
+
+  <Style x:Key="ComboBoxStyle" TargetType="based:RiotComboBox">
+    <Setter Property="Width" Value="120"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+  </Style>
+
+  <Style x:Key="TroubleshootingTextStyle" TargetType="TextBlock">
+    <Setter Property="Margin" Value="0,30,0,10"/>
+    <Setter Property="FontSize" Value="12"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+  </Style>
+
+  <Style x:Key="RepairButtonStyle" TargetType="based:RiotButton">
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+  </Style>
+
+  <Style x:Key="CompleteButtonStyle" TargetType="based:RiotButton">
+    <Setter Property="Grid.Row" Value="2"/>
+    <Setter Property="Grid.ColumnSpan" Value="2"/>
+    <Setter Property="Margin" Value="0 20 0 -1"/>
+    <Setter Property="Content" Value="Complete"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Bottom"/>
+  </Style>
+
   <Style TargetType="views:OptionContent">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="views:OptionContent">
-          <Grid Background="#AA000000">
-            <Border
-              Background="#000000"
-              Width="800"
-              Height="500"
-              BorderBrush="{StaticResource RiotBorderBrush}"
-              BorderThickness="1">
+          <Grid Style="{StaticResource MainGridStyle}">
+            <Border Style="{StaticResource MainBorderStyle}">
               <Grid>
                 <Grid.RowDefinitions>
                   <RowDefinition Height="Auto"/>
@@ -37,26 +164,42 @@
                   <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <based:RiotButton
-                  Grid.Column="1"
-                  Command="{Binding CloseCommand}"
-                  Margin="20"
-                  Content="Restore Defaults"
-                  HorizontalAlignment="Right"
-                  VerticalAlignment="Top"/>
-                
-                <james:UnoLayer Style="{StaticResource OptionMenuLayerStyle}" LayerName="OptionMenuLayer"/>
-                <based:RiotButton
-                  Grid.Row="2"
-                  Grid.ColumnSpan="2"
-                  Command="{Binding CloseCommand}"
-                  Margin="10"
-                  Content="Complete"
-                  HorizontalAlignment="Center"
-                  VerticalAlignment="Bottom"/>
-              </Grid>
+                <Border Style="{StaticResource TopBorderStyle}"/>
+                <Border Style="{StaticResource LeftBorderStyle}"/>
+                <Border Style="{StaticResource BottomBorderStyle}"/>
+                <StackPanel Style="{StaticResource HeaderStackPanelStyle}">
+                  <TextBlock Style="{StaticResource ClientTextStyle}"/>
+                  <TextBlock Style="{StaticResource GeneralTextStyle}"/>
+                </StackPanel>
 
-              
+                <based:RiotButton Style="{StaticResource RestoreDefaultsButtonStyle}"/>
+
+                <james:UnoLayer Style="{StaticResource OptionMenuLayerStyle}" LayerName="OptionMenuLayer"/>
+
+                <StackPanel Style="{StaticResource HeaderStackPanelStyle}">
+                  <TextBlock Style="{StaticResource ClientTextStyle}" Text="CLIENT /"/>
+                  <TextBlock Style="{StaticResource GeneralTextStyle}" Text="GENERAL"/>
+                </StackPanel>
+
+                <based:RiotButton Style="{StaticResource RestoreDefaultsButtonStyle}" Content="Restore Defaults"/>
+
+                <james:UnoLayer Style="{StaticResource OptionMenuLayerStyle}" LayerName="OptionMenuLayer"/>
+
+                <StackPanel Style="{StaticResource ContentStackPanelStyle}">
+                  <TextBlock Style="{StaticResource RulesTextStyle}" Text="League of Legends Code of Conduct"/>
+                  <Button Style="{StaticResource DetailButtonStyle}" Content="View Details ↗"/>
+                  <based:RiotCheckBox Content="Enable Low Spec Mode" />
+                  <based:RiotCheckBox Content="Close client during game" />
+                  <based:RiotCheckBox Content="Automatically send crash reports" />
+                  <based:RiotCheckBox Content="Enable beginner tooltips and help" />
+                  <TextBlock Style="{StaticResource WindowSizeTextStyle}" Text="Window Size"/>
+                  <based:RiotComboBox Style="{StaticResource ComboBoxStyle}"/>
+                  <TextBlock Style="{StaticResource TroubleshootingTextStyle}" Text="Troubleshooting"/>
+                  <based:RiotButton Style="{StaticResource RepairButtonStyle}" Content="Start Full Repair"/>
+                </StackPanel>
+
+                <based:RiotButton Style="{StaticResource CompleteButtonStyle}" Command="{Binding CloseCommand}" Content="Complete"/>
+              </Grid>
             </Border>
           </Grid>
         </ControlTemplate>
