--- a/src/Leagueoflegends.Navigate/Themes/Views/OptionMenuContent.xaml
+++ b/src/Leagueoflegends.Navigate/Themes/Views/OptionMenuContent.xaml
@@ -8,9 +8,8 @@
     <Setter Property="Foreground" Value="#A09B8C"/>
     <Setter Property="Text" Value="CLIENT"/>
     <Setter Property="FontSize" Value="12"/>
-    <Setter Property="Margin" Value="20 10 0 10"/>
+    <Setter Property="Margin" Value="30 20 0 10"/>
   </Style>
-
 
   <Style TargetType="views:OptionMenuContent">
     <Setter Property="VerticalAlignment" Value="Top"/>
@@ -19,7 +18,7 @@
         <ControlTemplate TargetType="views:OptionMenuContent">
           <StackPanel>
             <TextBlock Style="{StaticResource CategoryTextStyle}" Text="CLIENT"/>
-            <units:RiotOptionMenuButton Content="GENERAL"/>
+            <units:RiotOptionMenuButton Content="GENERAL" IsChecked="True"/>
             <units:RiotOptionMenuButton Content="NOTIFICATION"/>
             <units:RiotOptionMenuButton Content="CHAT/FRIENDS"/>
             <units:RiotOptionMenuButton Content="SOUND"/>
@@ -35,7 +34,6 @@
             <units:RiotOptionMenuButton Content="VERIFICATION"/>
             <units:RiotOptionMenuButton Content="PRIVACY NOTICE"/>
             <units:RiotOptionMenuButton Content="TOU"/>
-            <units:RiotOptionMenuButton Content="THIRD-PARTY LICENSES"/>
             <units:RiotOptionMenuButton Content="VERSION"/>
           </StackPanel>
         </ControlTemplate>
